stuck, non reactive media query

--- a/style/index.css
+++ b/style/index.css
@@ -46,7 +46,7 @@ body{
     font-size:1.8rem;
     line-height:1.5;
     color:#4f4f4f;
-    background-color:oldlace;
+    background-color:#FAF0E6;
     font-family: 'Heebo', sans-serif;
 }
 header{
@@ -80,6 +80,7 @@ header{
 .index nav a:hover{
     background-color: black;
     color: blanchedalmond;
+    border-radius: 120px 20px 120px 20px;
 }
 /* section gallery */
 #gallery{
@@ -113,6 +114,7 @@ header{
 #gallery button:hover{
     background-color: black;
     color: white;
+    border-radius: 120px 20px 120px 20px;
 }
 #gallery.bg-img{
 border-radius: 120px 20px 120px 20px;
@@ -131,6 +133,7 @@ font-size: 4.0rem;
 .container{
 display: flex;
 flex-wrap: wrap;
+justify-content: space-evenly;
 width: 100%;
 margin-top: 5rem;
 border-top: 1rem solid black;
@@ -142,12 +145,33 @@ margin-left: 5rem;
 margin-right: 1rem;
 margin-top: 4rem;
 margin-bottom: 4rem;
-justify-content: space-around;
+width: 20%;
+height: 30vh;
 background-image: url('https://picsum.photos/800');
 }
+.container .buttons{
+display: flex;
+flex-wrap: nowrap; 
+justify-content: space-around;
+width: 100%;
+}
+.container .buttons2{
+    display: flex;
+    flex-wrap: nowrap; 
+    justify-content: space-around;
+    width: 100%;
+    padding-bottom: 2rem;
+    }
 .container button{
-justify-items: center;
 text-align: center;
+border: none;
+}
+button:hover{
+    background-color: black;
+    color: blanchedalmond;
+    padding: .5rem;
+    border-radius: 120px 20px 120px 20px;
+
 }
 .container .bg-img button:hover{
     background-color: black;
@@ -171,3 +195,19 @@ footer a:hover{
     background-color: black;
     color: blanchedalmond;
 }
+
+
+/* media queries */
+@media(max-width 500px){
+header .nav{
+    padding: 5rem;
+}  
+}
+/* tablet queries */
+@media(max-width 800px){
+
+}
+
+
+
+
